<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QRScanDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="device_capture">扫描二维码</string>
	<string name="msg_camera_framework_bug">摄像头启动失败!</string>
	<string name="common_retry">重试</string>
    <string name="common_ok">确定</string>

</resources>
